--- a/header_footer.css
+++ b/header_footer.css
@@ -58,6 +58,11 @@ ul {
     display: flex;
     justify-content: left;
 }
+.nostyle {
+    text-decoration: none;
+    color: inherit;
+    background-color: transparent;
+}
 
 .companyName {
     margin-left: 2rem;
