--- a/about.css
+++ b/about.css
@@ -28,9 +28,10 @@
 .founders{
   width: 100%;
   padding:10px;
-  border: 1px solid black;
+  border: 1px solid rgba(0, 0, 0, 0.5);
   margin: auto;
   background-color: rgb(225,235,220);
+  background-color: #8ee4af54;
   font-family: "Capsule Sans Display",system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif;
 }
 
@@ -49,9 +50,9 @@
   height: 180px;
   width: 240px;
   padding: 20px;
-  background-color: #60C8E1;
+  background-color: #7dd5fa;
   border-radius: 25px;
-  border: 3px solid #60C8E1;
+  border: 3px solid #7dd5fa;
   margin: 15px;
 
   
@@ -61,21 +62,21 @@
   height: 180px;
   width: 240px;
   padding: 20px;
-  background-color: #F26BEF;
+  background-color: #f78268;
   border-radius: 25px;
-  border: 3px solid #F26BEF;
+  border: 3px solid #f78268;
   margin: 15px;
 
 }
 
 .box3{
-  background-color: #A7FA70;
-  border: 3px solid #A7FA70;
+  background-color: #5beee5;
+  border: 3px solid #5beee5;
 }
 
 .box4{
-  background-color: #FFFD89;
-  border: 3px solid #FFFD89;
+  background-color: #F6E65E;
+  border: 3px solid #F6E65E;
 }
 
 p{
@@ -97,4 +98,14 @@ p{
   .flex-container1, .flex-container2{
     flex-direction: column;
   }
+}
+
+.hidden{
+  display: none;
+}
+
+#boxes {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
